fix logation btn on-top and add z-index footer modal

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -61,3 +61,7 @@ main {
   clip-path: inset(50%);
   margin: -1px;
 }
+
+#back-to-top {
+  bottom: 70px;
+}
